# TenetKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REFACTOR_GUIDE.md
.claude/: settings.json
cmake/: CompilerFlags.cmake  Dependencies.cmake  FindMKL.cmake  TenetKitConfig.cmake.in
docs/: C++重构设计方案.md  架构总结.md
examples/: CMakeLists.txt  finite_temperature_settn.cpp  heisenberg_dmrg.cpp  hubbard_tdvp.cpp
include/tenet/algebra/: mpo_axpy.hpp  mpo_mul.hpp  mpo_trace.hpp
include/tenet/algorithm/: cbe.hpp  dmrg.hpp  settn.hpp  tdvp.hpp
include/tenet/core/: backend.hpp  dense_tensor.hpp  factorization.hpp  space.hpp  tensor_ops.hpp
include/tenet/environment/: cbe_environment.hpp  env_push.hpp  env_tensor.hpp  environment.hpp  mpo_environment.hpp  two_layer_mpo_env.hpp
include/tenet/hamiltonian/: ham_action.hpp  ham_builders.hpp  mpo_ham_action.hpp  projective_ham.hpp
include/tenet/intr_tree/: add_interaction.hpp  interaction_node.hpp  local_operator.hpp
include/tenet/krylov/: arnoldi.hpp  lanczos.hpp
include/tenet/local_space/: fermion.hpp  spin.hpp
include/tenet/mps/: canonical.hpp  dense_mpo.hpp  dense_mpo_tensor.hpp  mpo.hpp  mpo_tensor.hpp  mps.hpp  mps_tensor.hpp
include/tenet/observables/: add_observable.hpp  cal_observable.hpp  obs_node.hpp
include/tenet/process_control/: config.hpp  scheme.hpp  sweep_info.hpp
include/tenet/utils/: io.hpp  logger.hpp  timer.hpp
src/algebra/: mpo_axpy.cpp  mpo_mul.cpp  mpo_trace.cpp
src/algorithm/: cbe.cpp  dmrg.cpp  settn.cpp  tdvp.cpp
src/core/: dense_tensor.cpp  factorization.cpp  tensor_ops.cpp
src/environment/: env_push.cpp  environment.cpp  mpo_env_push.cpp  two_layer_mpo_env.cpp
src/hamiltonian/: ham_action.cpp  mpo_ham_action.cpp  projective_ham.cpp
src/intr_tree/: interaction_tree.cpp
src/krylov/: arnoldi.cpp  lanczos.cpp
src/mps/: canonical.cpp  dense_mpo.cpp  dense_mpo_tensor.cpp  mpo.cpp  mps.cpp
src/observables/: add_observable.cpp  cal_observable.cpp
tests/: CMakeLists.txt  free_fermion_ref.hpp  test_dense_tensor.cpp  test_dmrg.cpp  test_environment.cpp  test_factorization.cpp  test_lanczos.cpp  test_lattice.hpp  test_local_space.cpp  test_mpo.cpp  test_mps.cpp  test_observables.cpp  test_settn.cpp  test_tdvp.cpp  test_utils.cpp
